# ChessAnalyser

./: .gitignore  LICENSE  README.md  alembic.ini  alembic.sh  engines.json  example.pgn  load-folder.sh  make_venv.sh  pyproject.toml  requirements.txt  run.bat  run.sh  run_alembic.bat
alembic/versions/: 0bc8b67a875a_metadata_values_table.py  175be63b0ba1_moves_table.py  29dea8817c10_games_table.py  4f04d4da1137_analysis_engines_table.py  9741fcc800ae_analysis_table.py  e99865562d6c_mark_fen_as_a_non_standard_pgn_header.py  ebe5dd234fdd_players_table.py  fefca1ffa024_metadata_item_table.py
chessprf/: README.md
chessprf/minimiser/: minimiser.py
chessprf/src/: chessprf.py
docs/: make_docs.sh
docs/source/: cli.rst  conf.py  data_export.rst  data_management.rst  database.rst  engines.rst  index.rst  metadata_search.rst  run_script_note.rst  scoring.rst  setup.rst  workflow.rst
elo-modelling/: README.md  analysis.ipynb  constants.ipynb  database.ipynb  export.ipynb  multi_engine_elo_model.ipynb  pathutils.ipynb  requirements.txt  single_engine_elo_model.ipynb  update.sh
elo-modelling/sql/: load_analysis.sql
performance-modelling/: README.md  analysis.ipynb  database.ipynb  export.ipynb  make_venv.sh  multi_engine_performance_model.ipynb  pathutils.ipynb  performance_over_time.ipynb  pyproject.toml  requirements.txt  run_all.sh  run_notebook.sh  single_engine_performance_model.ipynb
performance-modelling/sql/: load_metadata.sql  load_player_game_ids.sql  load_players.sql
src/chess_analyser/: __main__.py
tests/integration/: analyse.sh  documentation.sh  (+10 more)
(+66 files in other folders)
